# synth_two

./: Cargo.toml  Makefile  README.md  bundler.toml  presets.json
src/: lib.rs  params.rs
src/editor/: envelope.rs  knob.rs  mod.rs  oscillator.rs  presets.rs  spectrum.rs  theme.css  wave.rs
src/synth/: drive.rs  envelope.rs  filter.rs  lfo.rs  mod.rs  oscillator.rs  reverb.rs  spectrum.rs  voice.rs
waves/sampled2/: sample-lawrence0.json  sample-lawrence1.json  sample-lawrence2.json  sample-lawrence3.json
waves/wanderer1/: wanderer1.json  wanderer2.json  wanderer3.json  wanderer4.json  wanderer5.json  wanderer6.json
waves/wanderer2/: iwanderer1.json  iwanderer2.json  iwanderer3.json
