[package]
name = "synth_two"
version = "0.0.1"
edition = "2021"
authors = ["Tobin Fitzthum <tobinf@protonmail.com>"]
license = "ISC"
description = "A second attempt at a synth"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
lazy_static = "1.4.0"
rust-embed = { version = "6.3.0", features = ["include-exclude"] }
atomic_float = "0.1"
rand = "0.8.5"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
